# anarkai

./: .gitignore  LLM.md  README.md  anarkai-browser-adapter-plan.md  biome.json  deps.json  netlify.toml  package.json  path.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.workspace.ts
apps/browser-pounce/: LLM.md  README.md  biome.json  build_log.txt  build_log_2.txt  package.json  playwright.config.ts  test-setup.ts  tsconfig.app.json  tsconfig.node.json  vite-plugin-css-tag.ts  vite.config.ts  vitest.config.ts
docs/: TODO.md  alveoli-variant-icons.md  architecture-overview.md  browser-adapter.md  commerce.md  current-status.md  design-principles.md  engine-render-events-analysis.md  freight-lines.md  index.md  maintenance.md  next-directions.md  project-inventory.md  refactoring-todo.md  resource-work-zones.md  road-border-rendering.md  roads.md  rust-core.md  ssh-test-engine.md  terrain-generation-roadmap.md  video-plan.md  world-representation.md
engines/core/: .gitignore  Cargo.toml  package.json
engines/core/src/: lib.rs
engines/core/src/common/: hex.rs  math.rs  mod.rs  rng.rs
engines/core/src/generation/: board.rs  mod.rs  population.rs  roads.rs  settlements.rs
engines/core/src/noise/: mod.rs
engines/core/src/terrain/: affordances.rs  biome.rs  continental.rs  drainage.rs  erosion.rs  lakes.rs  mod.rs  mountains.rs
plans/: details-punchlist.md  rust-generation-porting-spec.md  rust-road-generation.md
scripts/: ownk-test-watch.sh
src/: pure-glyf-icons.d.ts
todos/: propertyWidget_taskLog.md
(+958 files in other folders)
